# cpp-template-metaprogram

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: cpp-template-metaprogram_test.cpp
